--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "^15.4.4",
+    "@next/swc-win32-x64-msvc": "^15.4.5",
     "@tailwindcss/typography": "^0.5.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.534.0",
     "next": "15.4.3",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -31,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
