--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,15 +16,18 @@
   "dependencies": {
     "@next/swc-win32-x64-msvc": "^15.4.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/vision": "^4.4.1",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.534.0",
     "next": "15.4.3",
     "next-auth": "^5.0.0-beta.29",
+    "next-sanity": "^10.1.0-canary.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "sanity-plugin-markdown": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
