--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "sanity-plugin-markdown": "^6.0.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
